# serve_ray

./: agebt_actor.py  fault.py  main.py  model.py  pyproject.toml  ray_serve.py  ray_with_example.py  serve-config.yaml  test.py
agentx_pdk/: another_serve.py  ibm-granite.py  jsl-medphi.py  layout_model.py  serve_detr_layout_detec.py  serve_hugging_face.py  serve_lm.py  serve_orchastration.py  serve_vllm.py  test_req.py
